--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  mysql:
+  mysql_test_laravel_api:
     image: mysql:8.0
-    container_name: laravel_db
+    container_name: test_laravel_api_db
     # restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -9,62 +9,63 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
     ports:
-      - "3300:3306"
+      - "3301:3306"
     volumes:
       - dbdata:/var/lib/mysql
     networks:
-      - laravel
-  
-  phpmyadmin:
+      - test_laravel_api
+
+  phpmyadmin_test_laravel_api:
     image: phpmyadmin/phpmyadmin
-    container_name: test_laravel_phpmyadmin
+    container_name: test_laravel_api_phpmyadmin
     restart: unless-stopped
     environment:
-      PMA_HOST: db
+      PMA_HOST: mysql_test_laravel_api
       PMA_USER: root
       PMA_PASSWORD: root
     ports:
-      - "8080:80"
+      - "8082:80"
     networks:
-      - laravel
+      - test_laravel_api
 
-  app:
+  app_test_laravel_api:
     build:
       context: . # Points to the directory with your Dockerfile
       dockerfile: Dockerfile
-    container_name: laravel_apache
+    container_name: test_laravel_api_apache
     restart: unless-stopped
     working_dir: /var/www/html
     ports:
-      - "6000:6001"  # Expose WebSocket port
+      - "6002:6001" # Expose WebSocket port
     volumes:
       - .:/var/www/html
     networks:
-      - laravel
+      - test_laravel_api
     environment:
-      DB_HOST: mysql
+      DB_HOST: mysql_test_laravel_api
       DB_PORT: 3306
       DB_DATABASE: laravel
       DB_USERNAME: user
-      DB_PASSWORD: password
+      DB_PASSWORD: secret
     depends_on:
-      - mysql
+      - mysql_test_laravel_api
     command: /bin/sh -c "chmod -R 777 /var/www/html/storage && php artisan websockets:serve & php-fpm"
 
-  webserver:
+  webserver_test_laravel_api:
     image: nginx:alpine
-    container_name: laravel_nginx
+    container_name: test_laravel_api_nginx
     restart: unless-stopped
     ports:
-      - "9000:80"
+      - "9001:80"
     volumes:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - laravel
+      - test_laravel_api
 
 networks:
-  laravel:
+  test_laravel_api:
+
 
 volumes:
   dbdata:
