--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,71 @@
 services:
-  mysql:
+  mysql_laravel_api_test:
     image: mysql:8.0
-    container_name: laravel_db
+    container_name: laravel_api_test_db
     # restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
+      MYSQL_SSL_CA: "" # Disable SSL
     ports:
-      - "3300:3306"
+      - "3301:3306"
     volumes:
       - dbdata:/var/lib/mysql
     networks:
-      - laravel
-  
-  phpmyadmin:
+      - laravel_api_test
+  phpmyadmin_laravel_api_test:
     image: phpmyadmin/phpmyadmin
-    container_name: test_laravel_phpmyadmin
+    container_name: laravel_api_test_phpmyadmin
     restart: unless-stopped
     environment:
-      PMA_HOST: db
+      PMA_HOST: mysql_laravel_api_test
       PMA_USER: root
       PMA_PASSWORD: root
     ports:
-      - "8080:80"
+      - "8082:80"
     networks:
-      - laravel
+      - laravel_api_test
 
-  app:
+  app_laravel_api_test:
     build:
       context: . # Points to the directory with your Dockerfile
       dockerfile: Dockerfile
-    container_name: laravel_apache
+    container_name: laravel_api_test_apache
     restart: unless-stopped
     working_dir: /var/www/html
-    ports:
-      - "6000:6001"  # Expose WebSocket port
+    # PHP-FPM runs in this container; don't expose WebSocket port here.
     volumes:
       - .:/var/www/html
     networks:
-      - laravel
+      - laravel_api_test
     environment:
-      DB_HOST: mysql
+      DB_HOST: mysql_laravel_api_test
       DB_PORT: 3306
       DB_DATABASE: laravel
       DB_USERNAME: user
-      DB_PASSWORD: password
+      DB_PASSWORD: secret
     depends_on:
-      - mysql
-    command: /bin/sh -c "chmod -R 777 /var/www/html/storage && php artisan websockets:serve & php-fpm"
+      - mysql_laravel_api_test
+    # Let the image CMD (php-fpm) run. Run artisan commands from a separate service or locally.
+    command: /bin/sh -c "chmod -R 777 /var/www/html/storage && php-fpm"
 
-  webserver:
+  webserver_laravel_api_test:
     image: nginx:alpine
-    container_name: laravel_nginx
+    container_name: laravel_api_test_nginx
     restart: unless-stopped
     ports:
-      - "9000:80"
+      - "9001:80"
     volumes:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - laravel
+      - laravel_api_test
 
 networks:
-  laravel:
+  laravel_api_test:
+
 
 volumes:
   dbdata:
