--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7Ro05R1cSrjZj9L45Ewgx3kBM4oob5+hN1iLcOO8MJc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql_laravel_api_test
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=user
+DB_PASSWORD=secret
+DB_SSL_MODE=DISABLED
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
